--- a/Develop/assets/css/modal.css
+++ b/Develop/assets/css/modal.css
@@ -21,3 +21,96 @@ body {
   }
 
   
+  body {
+    font-family: "Cormorant Garamond", serif;
+    margin: 0;
+  }
+
+  .row {
+    width: 100%;
+    height: 220px;
+    overflow: visible;
+    white-space: nowrap;
+    overflow-y: scroll;
+  }
+
+  .column {
+    padding: 0 8px;
+    display: inline-block;
+  }
+
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: black;
+  }
+
+  .modal-content {
+    position: relative;
+    background-color: white;
+    margin: auto;
+    padding: 0;
+    width: 60vw;
+    max-width: 1200px;
+  }
+
+  .close {
+    color: white;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 35px;
+    font-weight: bold;
+  }
+
+  .cursor {
+    cursor: pointer;
+  }
+
+  .prev,
+  .next {
+    position: absolute;
+    top: 50%;
+    width: auto;
+    color: white;
+    font-weight: bold;
+    font-size: 50px;
+  
+  }
+
+  /* next button */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+
+  /* Numbering images*/
+  .numbertext {
+    color: white;
+    font-size: 25px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+
+  img {
+    margin-bottom: -4px;
+    width: 230;
+    padding: 5px;
+    filter: none;
+    transition: 1s;
+  }
+
+  .imageSize {
+    height: 200px;
+    width: 100%;
+    object-fit: cover;
+  }
