--- a/Develop/assets/css/apply.css
+++ b/Develop/assets/css/apply.css
@@ -109,3 +109,36 @@ h1 {
     font-size: 50px;
     font-style: italic;
 }
+
+/* Media Query */
+@media screen and (max-width: 960px) {
+    #weather, #countdown {
+      display: none;
+    }
+    .buttoncontainer {
+        display: flex;
+        justify-content: space-between;
+        margin: 0 auto;
+        max-width: 50%;
+        text-align: left;
+      }
+    .container {
+        margin: 150px auto;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    #weather, #countdown {
+      display: none;
+    }
+    .buttoncontainer {
+        display: flex;
+        justify-content: space-between;
+        margin: 0 auto;
+        max-width: 50%;
+        text-align: left;
+      }
+      .container {
+        margin: 150px auto;
+    }
+}
