--- a/Develop/assets/css/modal.css
+++ b/Develop/assets/css/modal.css
@@ -1,23 +1,96 @@
-body {
-    font-family: 'Cormorant Garamond', serif;
+  body {
+    font-family: "Cormorant Garamond", serif;
+    margin: 0;
   }
-  h1 {
-    text-align: center;
-    color: blue;
-    margin: 30px 0 50px;
+
+  .row {
+    width: 100%;
+    height: 220px;
+    overflow: visible;
+    white-space: nowrap;
+    overflow-y: scroll;
   }
-  .gallery {
-    margin: 10px 50px;
+
+  .column {
+    padding: 0 8px;
+    display: inline-block;
   }
-  .gallery img{
+
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: black;
+  }
+
+  .modal-content {
+    position: relative;
+    background-color: white;
+    margin: auto;
+    padding: 0;
+    width: 60vw;
+    max-width: 1200px;
+  }
+
+  .close {
+    color: white;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 35px;
+    font-weight: bold;
+  }
+
+  .cursor {
+    cursor: pointer;
+  }
+
+  .prev,
+  .next {
+    position: absolute;
+    display: flex;
+    top: 50%;
+    width: auto;
+    color: white;
+    font-weight: bold;
+    font-size: 50px;
+  
+  }
+
+  /* next button */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+
+  /* Numbering images*/
+  .numbertext {
+    color: white;
+    font-size: 25px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+
+  img {
+    margin-bottom: -4px;
     width: 230;
     padding: 5px;
-    filter: grayscale(100%);
+    filter: none;
     transition: 1s;
   }
-  .gallery img:hover{
-    filter: grayscale(0);
-    transform: scale(1.1);
+
+  .imageSize {
+    height: 200px;
+    width: 100%;
+    object-fit: cover;
   }
 
   
